--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -188,7 +188,7 @@ textarea {
   .auth-page_background {
     width: 50%;
     height: 100%;
-    background: linear-gradient(146.18deg, #0a2d75 -1.09%, #bdd3ff 182.62%);
+    background: linear-gradient(146.18deg, #f0f2f5 -1.09%, #0a2d75 182.62%);
     overflow: hidden;
     .detail {
       padding: 80px 72px;
