--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -322,7 +322,7 @@ textarea {
           height: auto;
         }
         p {
-          display: none;
+          display: none !important;
         }
       }
       .account-sidebar_menu,
@@ -330,10 +330,14 @@ textarea {
         a,
         .menu-shrink,
         .profile-menu {
-          // .icon {
-          // }
-          p {
-            display: none;
+          p, small {
+            display: none !important;
+            opacity: 0;
+            visibility: hidden;
+            width: 0;
+            height: 0;
+            overflow: hidden;
+            white-space: nowrap;
           }
         }
         .menu-shrink {
@@ -368,7 +372,6 @@ textarea {
       .menu-shrink,
       .profile-menu {
         display: flex;
-        flex-wrap: wrap;
         gap: 8px;
         padding: 8px 12px;
         border-radius: 8px;
@@ -405,6 +408,7 @@ textarea {
           font-style: 500;
           color: var(--color-white);
           transition: 0.4s ease;
+          white-space: nowrap;
         }
       }
       .profile-menu {
